# sociomol

./: .gitignore  README.md  api_diff.txt  diagnostic_log.txt  diagnostic_output.txt  pyproject.toml
STAstar2arm/nucleosome/: H1_DoubleLinker.star  LC0A_V3_make_LC_star_from_arms.py  LC1_Change2_XYZoriginAngst_columns.ipynb  R3_ID_Manual_1_with_origin.star  Reset_arm1_0_R3_ID_Manual_1_with_origin.star  Reset_arm1_1_R3_ID_Manual_1_with_origin.star  Reset_arm2_0_R3_ID_Manual_1_with_origin.star  Reset_arm2_1_R3_ID_Manual_1_with_origin.star  arm1_0_R3_ID_Manual_1_with_origin.star  arm1_1_R3_ID_Manual_1_with_origin.star  arm2_0_R3_ID_Manual_1_with_origin.star  arm2_1_R3_ID_Manual_1_with_origin.star  new_test.star  preprocess_nucleosome.py  shift.sh
STAstar2arm/nucleosome_batch/: ID_nucleosome_top3_tomos.star  ID_nucleosome_top3_tomos_with_origin.star  arm1_0_ID_nucleosome_top3_tomos_with_origin.star  shift.sh  (+3 more)
baseline_distance_clustering/: cluster_and_plot.py  cluster_and_plot_ribosome.py  combined_ARI_curves.csv  plot_combined_ari.py
figures_for_paper/: distance_angle_ablation_F1.py  plot_ari_comparisons.py  plot_f1_vs_dist.py  plot_f1_vs_l0.py  plot_f1_vs_max_half_bending_deg.py  plot_f1_vs_theta0.py
linker_prediction/: __init__.py  assigner.py  cli.py  cli_evaluate.py  graph.py  linker_assignment.py  linker_geometry.py  models.py  pipeline.py  preprocess.py  probability.py  star_utils.py
noise_robustness_analysis/: cases_config.py  debug_contour_compare.py  diag_filter.py  noise_sweep_metrics.csv  plot_signal_vs_noise.py  recovery_sweep_metrics.csv  sweep_noise_ratio.py  sweep_recovery_completeness.py  temp_plot_a4e9046.py  temp_ref.txt
nucleosome_linker_prediction/: linker_assignment.py  linker_geometry.py
nucleosome_metrics/: LC1_V2_MaxSurfCoord_plot_2DV2_densityNum3D_max2D.py  LC1_plot_2DV2_densityNum3D_max2D.py  LC2_Sig_compare_density_box_violin_Norm.py
sweeps/: sweep_P_threshold_Lp.py  sweep_config.py  sweep_dist_cutoff.py  sweep_dist_cutoff_ari.py  sweep_l0_nm.py  sweep_lp_nm.py  sweep_max_half_bending_deg.py  sweep_theta0.py
tests/: test_cli.py  test_evaluate.py  test_probability.py  test_smoke.py
tools/: LC2_plot_theta_vs_L.py  LC5C_V2B_DoubleCurve_plot_linker_probability_map_singleP_Ex.py  LC6_overlay_probability_and_scatter.py  config_plot.py  estimate_effective_Lp.py  evaluate_predictions.py  lp_heatmap_2d.py  plot_density_landscape.py  plot_density_landscape_4way.py  plot_energy_landscape.py  plot_energy_landscape_uniform.py  plot_length_distribution.py  sweep_P_threshold_Lp.py  sweep_dist_cutoff.py  sweep_lp_nm.py  sweep_theta0.py  visualize_Lp_mapping.py
(+225 files in other folders)
