[project]
name = "sociomol"
version = "0.1.0"
description = "Physics-based linker assignment for cryo-ET particles"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Long Chen"},
]
keywords = ["cryo-ET", "linker", "nucleosome", "tomography", "structural-biology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "starfile>=0.5",
    "eulerangles>=0.1",
    "scikit-learn>=1.0",
    "matplotlib>=3.4",
]

[project.scripts]
sociomol = "linker_prediction.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["linker_prediction*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
