[project]
name = "sociomol"
version = "0.1.0"
description = "SocioMol: Inferring connectivity in polymer-linked assemblies from cryo-electron tomography."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Long Chen"},
]
keywords = ["cryo-ET", "linker", "nucleosome", "tomography", "structural-biology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "starfile>=0.5",
    "eulerangles>=0.1",
    "scikit-learn>=1.0",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/LongLeoChen91/sociomol"
Repository = "https://github.com/LongLeoChen91/sociomol"
Issues = "https://github.com/LongLeoChen91/sociomol/issues"

[project.scripts]
sociomol = "linker_prediction.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["linker_prediction*"]

[tool.setuptools.package-data]
linker_prediction = ["arm_geometry/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
